# MediaAI

./: CMakeLists.txt  README.md  coco.yaml  detector.cpp  detector.h  frame_utils.c  frame_utils.h  hw_transcode.c  inference.cpp  main.cpp  main.cpp.bak  mian.c  rtdetr_onnx.cpp  transcode.cpp  transcode.h  yolov8_onnx.cpp  yolov8_opencv_detector.cpp  yolov8_opencv_detector.h  yolov8_seg.cpp  yolov8_seg_onnx.cpp  yolov8_utils.cpp  yolov8_utils.h
datasets/: a.m3u8  a0.ts
